2005-09-23  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/ContentHandler.cpp:

	Don't open in default handler if that's Epiphany itself.
	Fixes bug #310023 and bug #317017 (merged from HEAD).

2005-09-09  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphySingle.cpp:

	Manually emit the "profile-change-net-teardown" notification;
	works around bug https://bugzilla.mozilla.org/show_bug.cgi?id=292699.

2005-08-13  Christian Persch  <chpe@cvs.gnome.org>

	=== Release 1.6.5 ===

	* NEWS:

2005-08-13  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	* embed/mozilla/EphyBrowser.cpp:
	* embed/mozilla/EphyBrowser.h:
	* embed/mozilla/mozilla-embed.cpp:
	* src/ephy-shell.c: (url_is_empty), (load_homepage),
	(ephy_shell_new_tab_full):
	* src/ephy-window.c: (ephy_window_open_link):

	Backport of focus fix from HEAD. Fixes bug #105153.

2005-08-13  Christian Persch  <chpe@cvs.gnome.org>

	* embed/ephy-favicon-cache.c: (ephy_favicon_cache_get):
	* lib/ephy-dnd.c: (ephy_dnd_drag_data_get):

	More gcc4 fixes.

2005-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* embed/ephy-favicon-cache.c: (icons_removed_cb):

	Fix crash! I wonder how nobody never noticed this one.

2005-07-30  Christian Persch  <chpe@cvs.gnome.org>

	* data/mime-types-permissions.xml:
	
	Sync with HEAD.

2005-07-30  Christian Persch  <chpe@cvs.gnome.org>

	* src/prefs-dialog.c: (prefs_homepage_current_button_clicked_cb):

	Fix setting homepage to current page. Fixes bug #311962.

2005-07-26  Christian Persch  <chpe@cvs.gnome.org>

	* src/bookmarks/ephy-topic-action.c: (button_toggled_cb):

	Use connect_object to connect to the menu's deactivate
	signal. May fix bug #309918.

2005-07-25  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-file-helpers.c: (ephy_file_launch_desktop_file):

	Don't crash in case the desktop file is not found.

2005-07-24  Christian Persch  <chpe@cvs.gnome.org>

	* src/bookmarks/ephy-bookmark-action.c: (connect_proxy):