@@ -1,5 +1,11 @@
 2005-09-23  Christian Persch  <chpe@cvs.gnome.org>
 
+	* embed/mozilla/EphySingle.cpp:
+
+	Work around mozilla NSS crash on shutdown.
+
+2005-09-23  Christian Persch  <chpe@cvs.gnome.org>
+
 	* embed/mozilla/ContentHandler.cpp:
 
 	Don't open in default handler if that's Epiphany itself.
